# Linux_File_Manager

./: .gitignore  CMakeLists.txt  Linux_File_Manager
build_scripts/: build.sh  clean.sh  cleanbuild.sh
src/: main.cpp
src/core/: FileManager.cpp  FileManager.h
src/tui/: TUI.cpp  TUI.h
src/utils/: utils.cpp  utils.h
